update to Spring 4.0.5, projectreactor 2025.0.5, jooq 3.21.2, testcontainers 2.0.5, flyway 12.5.0